Having some weird issue with an image being cropped in teh Ctudent CTA section

--- a/revclient/src/views/ProjectsHome/CTAplusTrending/CTAPlusTrades.scss
+++ b/revclient/src/views/ProjectsHome/CTAplusTrending/CTAPlusTrades.scss
@@ -2,4 +2,5 @@
 	background-color: rgb(0%, 15%, 29%);
 	display: flex;
 	flex-direction: column;
+	height: 1500px;
 }
