--- a/revclient/src/views/ProjectsHome/CTAplusTrending/StudentCTA/StudentCTA.scss
+++ b/revclient/src/views/ProjectsHome/CTAplusTrending/StudentCTA/StudentCTA.scss
@@ -3,8 +3,11 @@
 	justify-content: space-around;
 	color: white;
 	clip-path: polygon(0 0, 100% 0, 100% 61%, 0% 100%);
-	height: 50%;
-	min-height: 600px;
+	max-height: 35%;
+	img {
+		object-fit: contain;
+		max-width: 90%;
+	}
 	.cta {
 		width: 38%;
 		margin: 5% auto auto 8%;
@@ -19,12 +22,5 @@
 				background-color: $snow-white;
 			}
 		}
-	}
-	img {
-		// margin: 1.6% 1.6% auto 0;
-		width: 70%;
-		max-height: 60%;
-		object-fit: scale-down;
-		margin-top: 4%;
 	}
 }
