--- a/revclient/src/views/ProjectsHome/SubscribeCTA/SubscribeCTA.scss
+++ b/revclient/src/views/ProjectsHome/SubscribeCTA/SubscribeCTA.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	color: $chillFi-purple;
-	margin-top: 8%;
+	margin-top: 25%;
 	img {
 		object-fit: scale-down;
 		margin-left: 18%;
